# brickflowUI

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  SKILL.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  security.yml
.site_check/: 404.html  index.html  sitemap.xml
.site_check/API_REFERENCE/: index.html
.site_check/ARCHITECTURE/: index.html
.site_check/DATABRICKS_APPS/: index.html
.site_check/EXAMPLES/: index.html
.site_check/FAQ/: index.html
.site_check/GETTING_STARTED/: index.html
.site_check/HOW_IT_WORKS/: index.html
.site_check/POLISH_GUIDE/: index.html
.site_check/PORTAL_TUTORIAL/: index.html
.site_check/PUBLISHING/: index.html
.site_check/RECIPES/: index.html
.site_check/THEMING/: index.html
.site_check/TROUBLESHOOTING/: index.html
.site_check/TUTORIAL/: index.html
.site_check/VISUALIZATIONS/: index.html
.site_check/components/: index.html
.site_check/learning/: index.html
.site_check/search/: search_index.json
.superpowers/sdd/: task-4-report.md
brickflowui/: __init__.py  app.py  auth.py  components.py  server.py  state.py  theme.json  theme.py  vdom.py  version.py
brickflowui/cli/: __init__.py  main.py
brickflowui/databricks/: __init__.py  env.py  services.py  sql.py  uc.py
bricksflowui/: __init__.py
bricksflowui/cli/: __init__.py  main.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUTH_AND_SECURITY.md  BRANCH_STRATEGY.md  BUILD.md  CHANGELOG.md  COMMUNITY.md  DATABRICKS_APPS.md  EXAMPLES.md  FAQ.md  GEOMETRIC_UI.md  GETTING_STARTED.md  HOW_IT_WORKS.md  LOCAL_DEVELOPMENT.md  MIGRATION_GUIDE.md  PERFORMANCE.md  POLISH_GUIDE.md  PORTAL_TUTORIAL.md  PROJECT_STANDARDS.md  PUBLISHING.md  RECIPES.md  RELEASE_CHECKLIST.md  REPOSITORY_ADMIN.md  ROADMAP.md  STABILITY.md  THEMING.md  TROUBLESHOOTING.md  TUTORIAL.md  VIBECODING.md  VISUALIZATIONS.md  WHY_BRICKFLOWUI.md  index.md
docs/components/: catalog.md  charts-and-visualizations.md  content-and-feedback.md  databricks-components.md  index.md  inputs-and-forms.md  layout-and-surfaces.md  navigation-and-overlays.md  tables-and-data.md  workflow-patterns.md
docs/learning/: 01-what-is-brickflowui.md  02-install-and-run.md  03-your-first-app.md  04-mental-model.md  05-layout-skills.md  06-components-and-composition.md  07-state-and-events.md  08-inputs-and-user-actions.md  09-forms-and-api-routes.md  10-tables-and-data-display.md  11-charts-and-visualizations.md  12-pipeline-dashboards.md  13-chatbot-and-assistant-ui.md  14-theming-and-branding.md  15-navigation-and-app-structure.md  16-databricks-apps-deployment.md  17-debugging-and-reliability.md  18-production-checklist.md  19-capstone-project.md  glossary.md  index.md
docs/stylesheets/: brand.css
docs/verification/: 2026-06-29-stability-report.md  2026-07-01-navigation-patch-report.md  2026-07-14-agentic-stability-report.md  2026-07-14-first-load-event-latency.md  2026-07-21-showcase-foundation-report.md
examples/: manifest.json
examples/acme_analytics_command_center/: app.py
examples/auth_portal/: app.py  astellas_theme.yaml  requirements.txt  theme.yaml
examples/chatbot_workspace/: app.py  requirements.txt
examples/clinical_trial_command_center/: app.py  requirements.txt
examples/component_studio/: app.py  requirements.txt
examples/counter/: app.py  app.yaml  requirements.txt
examples/data_pipeline_command_center/: app.py  requirements.txt
examples/demo_app/: app.py  app.yaml  requirements.txt
examples/geometric_signal_lab/: app.py
examples/landing_site/: app.py
examples/local_playground/: app.py  requirements.txt
examples/operations_finance_portal/: app.py  app.yaml  portal_theme.yaml  requirements.txt
examples/pipeline_observability_015/: app.py  app.yaml  requirements.txt
examples/secure_internal_tools/: app.py  requirements.txt
examples/showcase/: app.py  theme.yaml
examples/weather_dashboard/: app.py
examples/workspace_studio/: app.py  requirements.txt
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsc_errors.txt  vite.config.ts
scripts/: cleanup_local_artifacts.ps1  example_manifest.py  generate_component_reference.py  render_docs_diagrams.py  smoke_examples.py
skills/: README.md
tests/: _branding_test.yaml  test_app_server.py  test_cli.py  test_components.py  test_databricks_services.py  test_databricks_sql.py  test_databricks_uc.py  test_docs_generation.py  test_examples.py  test_package_alias.py  test_packaging.py  test_state.py  test_theme.py  test_vdom.py  test_version.py
(+198 files in other folders)
